{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 233,
  "lineage": "599a824b-0f72-1591-e1b1-2bb3c8a6e410",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0143b4aed47465f04",
            "arn": "arn:aws:ec2:ap-south-1:851725282145:elastic-ip/eipalloc-0143b4aed47465f04",
            "domain": "vpc",
            "id": "eipalloc-0143b4aed47465f04",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-202-77-153.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.77.153",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725282145:internet-gateway/igw-0745c28a52fcc883f",
            "id": "igw-0745c28a52fcc883f",
            "owner_id": "851725282145",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-01d5ed3136c5959cf"
          },
          "dependencies": [
            "aws_vpc.Custom-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0143b4aed47465f04",
            "association_id": "eipassoc-0945fed15dfae7334",
            "connectivity_type": "public",
            "id": "nat-0ac1129122658a497",
            "network_interface_id": "eni-07f3e52b9f60a3188",
            "private_ip": "10.0.1.132",
            "public_ip": "13.202.77.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05328b7416f6c8bc9",
            "tags": {
              "name": "Dev-Custom-Nat"
            },
            "tags_all": {
              "name": "Dev-Custom-Nat"
            }
          },
          "dependencies": [
            "aws_eip.Nat",
            "aws_subnet.P-Subnets",
            "aws_vpc.Custom-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725282145:route-table/rtb-0c52c2a7836b1213d",
            "id": "rtb-0c52c2a7836b1213d",
            "owner_id": "851725282145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0745c28a52fcc883f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d5ed3136c5959cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat",
            "aws_internet_gateway.IG",
            "aws_nat_gateway.Nat",
            "aws_subnet.P-Subnets",
            "aws_vpc.Custom-Vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725282145:route-table/rtb-065730114d24bb19e",
            "id": "rtb-065730114d24bb19e",
            "owner_id": "851725282145",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ac1129122658a497",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d5ed3136c5959cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat",
            "aws_internet_gateway.IG",
            "aws_nat_gateway.Nat",
            "aws_subnet.P-Subnets",
            "aws_vpc.Custom-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fd3f53088a020c5",
            "route_table_id": "rtb-065730114d24bb19e",
            "subnet_id": "subnet-00230cb81c195bed0"
          },
          "dependencies": [
            "aws_eip.Nat",
            "aws_internet_gateway.IG",
            "aws_nat_gateway.Nat",
            "aws_route_table.rts",
            "aws_subnet.P-Subnets",
            "aws_subnet.Pri-Subnets",
            "aws_vpc.Custom-Vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9ec2ac918fedf09",
            "route_table_id": "rtb-065730114d24bb19e",
            "subnet_id": "subnet-0a8885f7f686d0992"
          },
          "dependencies": [
            "aws_eip.Nat",
            "aws_internet_gateway.IG",
            "aws_nat_gateway.Nat",
            "aws_route_table.rts",
            "aws_subnet.P-Subnets",
            "aws_subnet.Pri-Subnets",
            "aws_vpc.Custom-Vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd1634b8295855fd",
            "route_table_id": "rtb-065730114d24bb19e",
            "subnet_id": "subnet-09cdfede376cf7796"
          },
          "dependencies": [
            "aws_eip.Nat",
            "aws_internet_gateway.IG",
            "aws_nat_gateway.Nat",
            "aws_route_table.rts",
            "aws_subnet.P-Subnets",
            "aws_subnet.Pri-Subnets",
            "aws_vpc.Custom-Vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0094b409cc2895e2e",
            "route_table_id": "rtb-065730114d24bb19e",
            "subnet_id": "subnet-094316562b85293d1"
          },
          "dependencies": [
            "aws_eip.Nat",
            "aws_internet_gateway.IG",
            "aws_nat_gateway.Nat",
            "aws_route_table.rts",
            "aws_subnet.P-Subnets",
            "aws_subnet.Pri-Subnets",
            "aws_vpc.Custom-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e188da826095ea0",
            "route_table_id": "rtb-0c52c2a7836b1213d",
            "subnet_id": "subnet-05328b7416f6c8bc9"
          },
          "dependencies": [
            "aws_eip.Nat",
            "aws_internet_gateway.IG",
            "aws_nat_gateway.Nat",
            "aws_route_table.rts",
            "aws_subnet.P-Subnets",
            "aws_vpc.Custom-Vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8d03162334dbfed",
            "route_table_id": "rtb-0c52c2a7836b1213d",
            "subnet_id": "subnet-0b73e8f91dad5f9d8"
          },
          "dependencies": [
            "aws_eip.Nat",
            "aws_internet_gateway.IG",
            "aws_nat_gateway.Nat",
            "aws_route_table.rts",
            "aws_subnet.P-Subnets",
            "aws_vpc.Custom-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Aws-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725282145:security-group/sg-061a4e757eff76b9f",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061a4e757eff76b9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250520093759295500000001",
            "name_prefix": "terraform-",
            "owner_id": "851725282145",
            "revoke_rules_on_delete": false,
            "tags": {
              "Costcente": "Dev-50",
              "Name": "Dev-SG",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "tags_all": {
              "Costcente": "Dev-50",
              "Name": "Dev-SG",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d5ed3136c5959cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Custom-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "P-Subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725282145:subnet/subnet-05328b7416f6c8bc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05328b7416f6c8bc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725282145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Costcente": "Dev-50",
              "Name": "Dev-Public-Sub-1",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "tags_all": {
              "Costcente": "Dev-50",
              "Name": "Dev-Public-Sub-1",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "vpc_id": "vpc-01d5ed3136c5959cf"
          },
          "dependencies": [
            "aws_vpc.Custom-Vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725282145:subnet/subnet-0b73e8f91dad5f9d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b73e8f91dad5f9d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725282145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Costcente": "Dev-50",
              "Name": "Dev-Public-Sub-2",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "tags_all": {
              "Costcente": "Dev-50",
              "Name": "Dev-Public-Sub-2",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "vpc_id": "vpc-01d5ed3136c5959cf"
          },
          "dependencies": [
            "aws_vpc.Custom-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Pri-Subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725282145:subnet/subnet-00230cb81c195bed0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00230cb81c195bed0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725282145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Costcente": "Dev-50",
              "Name": "Dev-Private-Sub-1",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "tags_all": {
              "Costcente": "Dev-50",
              "Name": "Dev-Private-Sub-1",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "vpc_id": "vpc-01d5ed3136c5959cf"
          },
          "dependencies": [
            "aws_vpc.Custom-Vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725282145:subnet/subnet-0a8885f7f686d0992",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8885f7f686d0992",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725282145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Costcente": "Dev-50",
              "Name": "Dev-Private-Sub-2",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "tags_all": {
              "Costcente": "Dev-50",
              "Name": "Dev-Private-Sub-2",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "vpc_id": "vpc-01d5ed3136c5959cf"
          },
          "dependencies": [
            "aws_vpc.Custom-Vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725282145:subnet/subnet-09cdfede376cf7796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cdfede376cf7796",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725282145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Costcente": "Dev-50",
              "Name": "Dev-Private-Sub-3",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "tags_all": {
              "Costcente": "Dev-50",
              "Name": "Dev-Private-Sub-3",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "vpc_id": "vpc-01d5ed3136c5959cf"
          },
          "dependencies": [
            "aws_vpc.Custom-Vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725282145:subnet/subnet-094316562b85293d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094316562b85293d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725282145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Costcente": "Dev-50",
              "Name": "Dev-Private-Sub-4",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "tags_all": {
              "Costcente": "Dev-50",
              "Name": "Dev-Private-Sub-4",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "vpc_id": "vpc-01d5ed3136c5959cf"
          },
          "dependencies": [
            "aws_vpc.Custom-Vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Custom-Vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:851725282145:vpc/vpc-01d5ed3136c5959cf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00879f56f0cadd41c",
            "default_route_table_id": "rtb-05b33bd96bbe58712",
            "default_security_group_id": "sg-0834d9c6af9aa57cf",
            "dhcp_options_id": "dopt-0a995503f16ddd8a1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d5ed3136c5959cf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b33bd96bbe58712",
            "owner_id": "851725282145",
            "tags": {
              "Costcente": "Dev-50",
              "Name": "Dev-Vpc",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            },
            "tags_all": {
              "Costcente": "Dev-50",
              "Name": "Dev-Vpc",
              "TeamDL": "honeybaddipudi167@gmail.com",
              "owner": "Dev-Team"
            }
          }
        }
      ]
    }
  ]
}